fix(build): run node from path

--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -15,4 +15,4 @@ WORKDIR /app
 # install native modules
 RUN yarn install --production
 
-ENTRYPOINT [ "/usr/bin/node", "/app/out/index.js" ]
+ENTRYPOINT [ "node", "/app/out/index.js" ]
