--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -13,4 +13,4 @@ WORKDIR /app
 # install native modules
 RUN yarn install --production
 
-ENTRYPOINT [ "/usr/bin/node", "/app/out/index.js" ]
+ENTRYPOINT [ "node", "/app/out/index.js" ]
