feat(filter): add shell exec filter

--- a/docs/controller/echo-controller.yml
+++ b/docs/controller/echo-controller.yml
@@ -10,6 +10,9 @@ data:
           kind: slack-listener
           name: slack-isolex
 
+  filters:
+    - !include ../docs/filter/shell-filter-github.yml
+
   transforms:
     - metadata:
         kind: template-transform
