--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -20,7 +20,7 @@ data:
     - !include ../docs/controller/command-controller.yml
     - !include ../docs/controller/completion-controller.yml
     - !include ../docs/controller/dice-controller.yml
-    # !include ../docs/controller/echo-controller.yml
+    - !include ../docs/controller/echo-controller.yml
     - !include ../docs/controller/github/commit-controller.yml
     - !include ../docs/controller/github/pull-controller.yml
     - !include ../docs/controller/github/endpoint/pull-controller.yml
