--- a/docs/filter/shell-filter-github.yml
+++ b/docs/filter/shell-filter-github.yml
@@ -5,7 +5,7 @@ data:
   filters: []
   strict: true
   # shell command
-  command: '/home/ssube/code/ssube/isolex/scripts/test-shell-filter.sh'
+  command: './scripts/test-shell-filter.sh'
   options:
     cwd: ~
-    env: {}
+    env: []
