--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "chai-as-promised": "7.1.1",
     "cron": "1.7.2",
     "escape-html": "1.0.3",
+    "eslint": "6.8.0",
     "eslint-plugin-chai": "0.0.1",
     "eslint-plugin-chai-expect": "2.1.0",
     "eslint-plugin-chai-expect-keywords": "1.0.0",
