fix: add redirects to example controllers

--- a/docs/controller/github/commit-controller.yml
+++ b/docs/controller/github/commit-controller.yml
@@ -11,6 +11,9 @@ data:
       id: !env ISOLEX_GITHUB_APP_INSTALLATION
 
   filters: []
+  redirect:
+    defaults: {}
+    forces: {}
   transforms:
     - metadata:
         kind: template-transform
