--- a/docs/controller/github/pull-controller.yml
+++ b/docs/controller/github/pull-controller.yml
@@ -11,4 +11,7 @@ data:
       id: !env ISOLEX_GITHUB_APP_INSTALLATION
 
   filters: []
+  redirect:
+    defaults: {}
+    forces: {}
   transforms: []
