--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -2,7 +2,7 @@ FROM apextoaster/node:11.15
 
 # install sqlite tools
 RUN apt-get update \
- && apt-get install -y sqlite3 \
+ && apt-get install -y bash curl jq sqlite3 \
  && rm -rf /var/lib/apt/lists/*
 
 # copy build output
