--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/cron": "1.7.2",
     "@types/escape-html": "0.0.20",
     "@types/express": "4.17.6",
+    "@types/express-serve-static-core": "^4.17.5",
     "@types/js-yaml": "3.12.3",
     "@types/jsonwebtoken": "8.3.9",
     "@types/lodash": "4.14.150",
