fix(schema): make redirect defaults/forces fields required
BREAKING CHANGE: service redirect must have both the `defaults` and
`forces` top-level keys, which may be empty. `redirect: {}` should
be replaced with `redirect: {defaults: {}, forces: {}}`.

--- a/docs/controller/account-controller.yml
+++ b/docs/controller/account-controller.yml
@@ -10,7 +10,9 @@ data:
       - session:create
     roles:
       - user
-  redirect: {}
+  redirect:
+    defaults: {}
+    forces: {}
   root:
     allow: true
     name: root
