--- a/docs/controller/bot-controller.yml
+++ b/docs/controller/bot-controller.yml
@@ -3,7 +3,9 @@ metadata:
   name: default-bot
 data:
   filters: []
-  redirect: {}
+  redirect:
+    defaults: {}
+    forces: {}
   transforms:
     - metadata:
         kind: template-transform
