--- a/docs/controller/reaction-controller.yml
+++ b/docs/controller/reaction-controller.yml
@@ -11,4 +11,6 @@ data:
             values:
               - regexp: !regexp /maple/
       add: [":maple_leaf:"]
-  redirect: {}
+  redirect:
+    defaults: {}
+    forces: {}
