--- a/docs/generator/cron-generator.yml
+++ b/docs/generator/cron-generator.yml
@@ -16,5 +16,6 @@ data:
         service: &target
           kind: discord-listener
           name: test-discord
+    forces: {}
   services:
     - *target
