--- a/docs/listener/express-listener.yml
+++ b/docs/listener/express-listener.yml
@@ -27,6 +27,7 @@ data:
         service:
           kind: discord-listener
           name: test-discord
+    forces: {}
   token:
     audience: test-audience
     issuer: !env ISOLEX_TOKEN_ISSUER
