fix(test): include pidfile tests, fix main test timeout

--- a/docs/test-valid.yml
+++ b/docs/test-valid.yml
@@ -29,6 +29,9 @@ data:
     - !include ../docs/controller/user-controller.yml
   endpoints:
     - !include ../docs/endpoint/echo-endpoint.yml
+    - !include ../docs/endpoint/graph-endpoint.yml
+    - !include ../docs/endpoint/health-endpoint.yml
+    - !include ../docs/endpoint/metrics-endpoint.yml
   generators:
     - !include ../docs/generator/metrics-generator.yml
   listeners:
