--- a/docs/listener/express-listener.yml
+++ b/docs/listener/express-listener.yml
@@ -7,10 +7,10 @@ data:
     # name: test-debug-endpoint
     - kind: echo-endpoint
       name: test-echo-endpoint
-    - kind: github-endpoint
-      name: test-github-endpoint
-    - kind: gitlab-endpoint
-      name: test-gitlab-endpoint
+    # kind: github-endpoint
+    # name: test-github-endpoint
+    # kind: gitlab-endpoint
+    # name: test-gitlab-endpoint
     - kind: graph-endpoint
       name: test-graph-endpoint
     - kind: health-endpoint
