--- a/docs/test-valid.yml
+++ b/docs/test-valid.yml
@@ -15,27 +15,27 @@ data:
             - isolex
             - isolex-test
   controllers:
-    - !include ../docs/controller/account-controller.yml
-    - !include ../docs/controller/bot-controller.yml
-    - !include ../docs/controller/completion-controller.yml
-    - !include ../docs/controller/dice-controller.yml
-    - !include ../docs/controller/learn-controller.yml
-    - !include ../docs/controller/math-controller.yml
-    - !include ../docs/controller/random-controller.yml
-    - !include ../docs/controller/reaction-controller.yml
-    - !include ../docs/controller/sed-controller.yml
-    - !include ../docs/controller/time-controller.yml
-    - !include ../docs/controller/token-controller.yml
-    - !include ../docs/controller/user-controller.yml
+    - !include ./docs/controller/account-controller.yml
+    - !include ./docs/controller/bot-controller.yml
+    - !include ./docs/controller/completion-controller.yml
+    - !include ./docs/controller/dice-controller.yml
+    - !include ./docs/controller/learn-controller.yml
+    - !include ./docs/controller/math-controller.yml
+    - !include ./docs/controller/random-controller.yml
+    - !include ./docs/controller/reaction-controller.yml
+    - !include ./docs/controller/sed-controller.yml
+    - !include ./docs/controller/time-controller.yml
+    - !include ./docs/controller/token-controller.yml
+    - !include ./docs/controller/user-controller.yml
   endpoints:
-    - !include ../docs/endpoint/echo-endpoint.yml
-    - !include ../docs/endpoint/graph-endpoint.yml
-    - !include ../docs/endpoint/health-endpoint.yml
-    - !include ../docs/endpoint/metrics-endpoint.yml
+    - !include ./docs/endpoint/echo-endpoint.yml
+    - !include ./docs/endpoint/graph-endpoint.yml
+    - !include ./docs/endpoint/health-endpoint.yml
+    - !include ./docs/endpoint/metrics-endpoint.yml
   generators:
-    - !include ../docs/generator/metrics-generator.yml
+    - !include ./docs/generator/metrics-generator.yml
   listeners:
-    - !include ../docs/listener/express-listener.yml
+    - !include ./docs/listener/express-listener.yml
   locale:
     metadata:
       kind: locale
@@ -49,8 +49,8 @@ data:
     - require: isolex-oot-example
       export: example-module
   parsers:
-    - !include ../docs/parser/args-parser.yml
-    - !include ../docs/parser/yaml-parser.yml
+    - !include ./docs/parser/args-parser.yml
+    - !include ./docs/parser/yaml-parser.yml
   process:
     pid:
       file: ./out/test-valid.pid
