--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "@microsoft/api-extractor": "7.9.13",
     "@octokit/app": "4.2.1",
     "@octokit/rest": "16.43.2",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-multi-entry": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-yaml": "^2.1.1",
     "@slack/client": "5.0.2",
     "@types/bunyan": "1.8.6",
     "@types/chai": "4.2.12",
@@ -107,14 +113,13 @@
     "rollup": "2.26.10",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-eslint": "7.0.0",
-    "rollup-plugin-json": "4.0.0",
-    "rollup-plugin-multi-entry": "2.1.0",
     "rollup-plugin-node-externals": "2.2.0",
-    "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-replace": "2.2.0",
+    "rollup-plugin-serve": "^1.0.4",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "0.27.2",
     "rollup-plugin-yaml": "2.0.0",
     "rxjs": "6.6.3",
+    "rollup-plugin-visualizer": "^4.1.1",
     "shiro-trie": "0.4.9",
     "sinon": "9.0.3",
     "sinon-chai": "3.5.0",
@@ -132,6 +137,11 @@
     "**/lodash": "4.17.20"
   },
   "nyc": {
-    "extends": "@istanbuljs/nyc-config-typescript"
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "exclude": [
+      "node_modules/**",
+      "scripts/*",
+      "test/**"
+    ]
   }
 }
