fix(build): remove test files from coverage

--- a/package.json
+++ b/package.json
@@ -137,11 +137,6 @@
     "**/lodash": "4.17.20"
   },
   "nyc": {
-    "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "node_modules/**",
-      "scripts/*",
-      "test/**"
-    ]
+    "extends": "@istanbuljs/nyc-config-typescript"
   }
 }
