feat(controller/github): request approval controller

--- a/package.json
+++ b/package.json
@@ -113,13 +113,14 @@
     "rollup": "2.27.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-eslint": "7.0.0",
+    "rollup-plugin-graph": "^2.0.0",
     "rollup-plugin-node-externals": "2.2.0",
     "rollup-plugin-serve": "1.0.4",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.27.2",
+    "rollup-plugin-visualizer": "4.1.1",
     "rollup-plugin-yaml": "2.0.0",
     "rxjs": "6.6.3",
-    "rollup-plugin-visualizer": "4.1.1",
     "shiro-trie": "0.4.9",
     "sinon": "9.0.3",
     "sinon-chai": "3.5.0",
