--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -21,6 +21,7 @@ data:
     - !include ./docs/controller/completion-controller.yml
     - !include ./docs/controller/dice-controller.yml
     - !include ./docs/controller/echo-controller.yml
+    - !include ./docs/controller/github/approve-controller.yml
     - !include ./docs/controller/github/commit-controller.yml
     - !include ./docs/controller/github/pull-controller.yml
     - !include ./docs/controller/github/endpoint/pull-controller.yml
