feat(controller/github): check request authors, define approve ctrl schema

--- a/docs/controller/github/approve-controller.yml
+++ b/docs/controller/github/approve-controller.yml
@@ -12,6 +12,9 @@ data:
   projects:
     - owner: ssube
       project: isolex
+      authors:
+        # renovate-bot
+        - ssube
       checks:
         - app: codeclimate
           conclusion: success
