--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "request-promise": "4.2.6",
     "request-promise-native": "1.0.9",
     "rollup": "2.35.1",
+    "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-eslint": "7.0.0",
     "rollup-plugin-graph": "2.0.0",
