fix(build): restrict aws-sdk updates to Monday

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,9 @@
     ":semanticCommitTypeAll(update)",
     ":semanticCommitScopeDisabled"
   ],
-  "branchPrefix": "update/"
+  "branchPrefix": "update/",
+  "packageRules": [{
+    "matchPackageNames": ["aws-sdk"],
+    "extends": ["schedule:earlyMondays"]
+  }]
 }
