--- a/package.json
+++ b/package.json
@@ -136,7 +136,8 @@
     "yargs-parser": "19.0.4"
   },
   "resolutions": {
-    "**/lodash": "4.17.21"
+    "**/lodash": "4.17.21",
+    "**/ini": "1.3.8"
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript"
