--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,4 +1,4 @@
-FROM node:12-alpine
+FROM docker.artifacts.apextoaster.com/node:12-alpine
 
 # install jq, sqlite cli
 RUN apk add bash curl jq sqlite
