--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -1,4 +1,4 @@
-FROM docker.artifacts.apextoaster.com/apextoaster/node:12.22
+FROM docker.artifacts.apextoaster.com/library/node:12
 
 # install sqlite tools
 RUN apt-get update \
