fix(build): make some production deps external and install to container

--- a/package.json
+++ b/package.json
@@ -22,29 +22,60 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@kubernetes/client-node": "0.15.0",
-    "aws-sdk": "2.953.0",
-    "discord.js": "11.6.4",
-    "shelljs": "^0.8.3",
-    "sqlite3": "5.0.2",
-    "typeorm": "0.2.36"
-  },
-  "devDependencies": {
     "@apextoaster/js-config": "0.2.0-3",
     "@apextoaster/js-utils": "0.4.0",
     "@apextoaster/js-yaml-schema": "0.4.0-4",
+    "@kubernetes/client-node": "0.15.0",
+    "@octokit/app": "4.3.0",
+    "@octokit/rest": "16.43.2",
+    "@slack/client": "5.0.2",
+    "ajv": "8.6.2",
+    "aws-sdk": "2.953.0",
+    "bufferutil": "4.0.3",
+    "bunyan": "1.8.15",
+    "cron": "1.8.2",
+    "discord.js": "11.6.4",
+    "escape-html": "1.0.3",
+    "express": "4.17.1",
+    "express-graphql": "0.12.0",
+    "graphql": "15.5.1",
+    "handlebars": "4.7.7",
+    "i18next": "20.3.5",
+    "js-yaml": "4.1.0",
+    "jsonpath-plus": "6.0.1",
+    "jsonwebtoken": "8.5.1",
+    "lodash": "4.17.21",
+    "mathjs": "9.4.4",
+    "node-emoji": "1.10.0",
+    "noicejs": "4.0.0",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0",
+    "prom-client": "13.1.0",
+    "reflect-metadata": "0.1.13",
+    "request": "2.88.2",
+    "request-promise": "4.2.6",
+    "request-promise-native": "1.0.9",
+    "rxjs": "7.3.0",
+    "shiro-trie": "0.4.10",
+    "shelljs": "0.8.3",
+    "sqlite3": "5.0.2",
+    "split-string": "6.1.0",
+    "typeorm": "0.2.36",
+    "utf-8-validate": "5.0.5",
+    "uuid": "8.3.2",
+    "ws": "7.5.3",
+    "yargs-parser": "19.0.4"
+  },
+  "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.1",
     "@microsoft/api-documenter": "7.13.33",
     "@microsoft/api-extractor": "7.18.4",
-    "@octokit/app": "4.3.0",
-    "@octokit/rest": "16.43.2",
     "@rollup/plugin-commonjs": "18.1.0",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-multi-entry": "4.0.0",
     "@rollup/plugin-node-resolve": "11.2.1",
     "@rollup/plugin-replace": "2.4.2",
     "@rollup/plugin-yaml": "3.0.0",
-    "@slack/client": "5.0.2",
     "@types/bunyan": "1.8.7",
     "@types/chai": "4.2.21",
     "@types/chai-as-promised": "7.1.4",
@@ -72,13 +103,8 @@
     "@typescript-eslint/eslint-plugin": "4.28.5",
     "@typescript-eslint/eslint-plugin-tslint": "4.28.5",
     "@typescript-eslint/parser": "4.28.5",
-    "ajv": "8.6.2",
-    "bufferutil": "4.0.3",
-    "bunyan": "1.8.15",
     "chai": "4.3.4",
     "chai-as-promised": "7.1.1",
-    "cron": "1.8.2",
-    "escape-html": "1.0.3",
     "eslint": "7.32.0",
     "eslint-plugin-chai": "0.0.1",
     "eslint-plugin-chai-expect": "2.2.0",
@@ -87,29 +113,10 @@
     "eslint-plugin-mocha": "9.0.0",
     "eslint-plugin-no-null": "1.0.2",
     "eslint-plugin-sonarjs": "0.9.1",
-    "express": "4.17.1",
-    "express-graphql": "0.12.0",
-    "graphql": "15.5.1",
-    "handlebars": "4.7.7",
-    "i18next": "20.3.5",
     "ineeda": "0.12.0-alpha.0",
-    "js-yaml": "4.1.0",
-    "jsonpath-plus": "6.0.1",
-    "jsonwebtoken": "8.5.1",
-    "lodash": "4.17.21",
-    "mathjs": "9.4.4",
     "mocha": "9.0.3",
     "mock-fs": "5.0.0",
-    "node-emoji": "1.10.0",
-    "noicejs": "4.0.0",
     "nyc": "15.1.0",
-    "passport": "0.4.1",
-    "passport-jwt": "4.0.0",
-    "prom-client": "13.1.0",
-    "reflect-metadata": "0.1.13",
-    "request": "2.88.2",
-    "request-promise": "4.2.6",
-    "request-promise-native": "1.0.9",
     "rollup": "2.54.0",
     "rollup-plugin-alias": "2.2.0",
     "rollup-plugin-commonjs": "10.1.0",
@@ -120,19 +127,12 @@
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.30.0",
     "rollup-plugin-yaml": "2.0.0",
-    "rxjs": "7.3.0",
-    "shiro-trie": "0.4.10",
     "sinon": "11.1.2",
     "sinon-chai": "3.7.0",
     "source-map-support": "0.5.19",
-    "split-string": "6.1.0",
     "standard-version": "9.3.1",
     "tslint": "6.1.3",
-    "typescript": "4.3.5",
-    "utf-8-validate": "5.0.5",
-    "uuid": "8.3.2",
-    "ws": "7.5.3",
-    "yargs-parser": "19.0.4"
+    "typescript": "4.3.5"
   },
   "resolutions": {
     "**/lodash": "4.17.21",
