fix(build): set docker TLS options

--- a/config/gitlab/ci-tools.yml
+++ b/config/gitlab/ci-tools.yml
@@ -23,13 +23,6 @@
     GIT_BRANCH: "${CI_COMMIT_REF_NAME}"
     GIT_COMMIT_SHA: "${CI_COMMIT_SHA}"
 
-.build-codecov:
-  image: docker.artifacts.apextoaster.com/apextoaster/codecov:3.7
-  tags:
-    - platform:k8s
-    - runner:shared
-  allow_failure: false
-
 .build-docker:
   image: docker.artifacts.apextoaster.com/apextoaster/docker:20.10
   services:
@@ -48,8 +41,12 @@
     - rm -rfv ${HOME}/.docker
 
   variables:
+    DOCKER_CERT_PATH: "/shared/docker/client"
     DOCKER_DRIVER: overlay2
-    DOCKER_HOST: tcp://localhost:2375
+    DOCKER_HOST: tcp://localhost:2376
+    DOCKER_TLS_CERTDIR: "/shared/docker"
+    DOCKER_TLS_VERIFY: 1
+    IMAGE_ROOT: "${CI_PROJECT_DIR}"
 
 .build-node:
   image: docker.artifacts.apextoaster.com/apextoaster/node:16.6
